CSS flexbox, ready for javascript

--- a/index.html
+++ b/index.html
@@ -11,7 +11,62 @@
 </head>
 
 <body>
+    <header>
+        <img src="https://images.unsplash.com/photo-1649301261741-5dad59f22d16?crop=entropy&cs=tinysrgb&fm=jpg&ixlib=rb-1.2.1&q=80&raw_url=true&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1475"
+            class="headerImage" width="100px" height="auto">
+    </header>
+    <div class="main">
+        <div class="left">
+            <div class="content">
+                <div class="top">
+                    <img src="https://images.unsplash.com/photo-1649302161055-e8a6b307b134?crop=entropy&cs=tinysrgb&fm=jpg&ixlib=rb-1.2.1&q=80&raw_url=true&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1475"
+                        width="200px" height="100px">
 
+                    <img src="https://images.unsplash.com/photo-1648996757972-918f03837d0d?crop=entropy&cs=tinysrgb&fm=jpg&ixlib=rb-1.2.1&q=80&raw_url=true&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1498"
+                        width="200px" height="100px">
+
+                    <img src="https://images.unsplash.com/photo-1648614009917-84831416abb6?crop=entropy&cs=tinysrgb&fm=jpg&ixlib=rb-1.2.1&q=80&raw_url=true&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1074"
+                        width="200px" height="100px">
+
+                    <img src="https://images.unsplash.com/photo-1637720361854-7f7c7ad3c85e?crop=entropy&cs=tinysrgb&fm=jpg&ixlib=rb-1.2.1&q=80&raw_url=true&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1074"
+                        width="200px" height="100px">
+                </div>
+                <div class="bot">
+                    <div class="botPic">
+                        <img src="https://images.unsplash.com/photo-1649302161055-e8a6b307b134?crop=entropy&cs=tinysrgb&fm=jpg&ixlib=rb-1.2.1&q=80&raw_url=true&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1475"
+                            width="750px" height="375px">
+                    </div>
+                    <div class="botRight">
+                        <label for="info">Paveikslo aprasymas</label> <br>
+                        <input type="text" name="info" id=""> <br>
+                        <button>Issaugoti aprasyma</button> <br>
+                        <button>Trinti is galerijos</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="right">
+            <div id="right1">
+                <label for="color">Pasirinkite spalva</label><input type="color"><br>
+                <input type="radio" name="picker" id="head"><label for="head">Header</label> <br>
+                <input type="radio" name="picker" id="foot"><label for="foot">Footer</label> <br>
+                <button>Pritaikyti</button>
+                <hr>
+            </div>
+            <div id="right2">
+                <h5>Paveikslu galerijoje parametrai</h5>
+                <label for="inputWidth">Plotis</label><input type="text" name="inputWidth" id=""> <br>
+                <label for="inputHeight">Aukstis</label><input type="text" name="inputHeight" id="">
+                <hr>
+            </div>
+            <div id="right3">
+                <label for="about">Rodyti aprasyma</label><input type="checkbox" name="about" id="">
+            </div>
+        </div>
+    </div>
+    <footer>
+
+    </footer>
 </body>
 
 </html>
