ability to choose header/footer color from input: function chooseColor

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="content">
                 <div class="top">
                     <img src="https://images.unsplash.com/photo-1649302161055-e8a6b307b134?crop=entropy&cs=tinysrgb&fm=jpg&ixlib=rb-1.2.1&q=80&raw_url=true&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1475"
-                        width="200px" height="100px">
+                        width="200px" height="100px" title="aprasymas">
 
                     <img src="https://images.unsplash.com/photo-1648996757972-918f03837d0d?crop=entropy&cs=tinysrgb&fm=jpg&ixlib=rb-1.2.1&q=80&raw_url=true&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1498"
                         width="200px" height="100px">
@@ -47,10 +47,10 @@
         </div>
         <div class="right">
             <div id="right1">
-                <label for="color">Pasirinkite spalva</label><input type="color"><br>
+                <label for="color">Pasirinkite spalva</label><input type="color" id="colorPicker"><br>
                 <input type="radio" name="picker" id="head"><label for="head">Header</label> <br>
                 <input type="radio" name="picker" id="foot"><label for="foot">Footer</label> <br>
-                <button>Pritaikyti</button>
+                <button id="applyColor">Pritaikyti</button>
                 <hr>
             </div>
             <div id="right2">
@@ -64,7 +64,7 @@
             </div>
         </div>
     </div>
-    <footer>
+    <footer id="footer">
 
     </footer>
 </body>
