ability to toggle pic description on/off

--- a/index.html
+++ b/index.html
@@ -19,21 +19,30 @@
         <div class="left">
             <div class="content">
                 <div class="top">
-                    <img src="https://images.unsplash.com/photo-1649302161055-e8a6b307b134?crop=entropy&cs=tinysrgb&fm=jpg&ixlib=rb-1.2.1&q=80&raw_url=true&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1475"
-                        width="200px" height="100px" class="smallPic" ondblclick="changePic(this)"
-                        onclick="selectPicture(this)">
-
-                    <img src="https://images.unsplash.com/photo-1648996757972-918f03837d0d?crop=entropy&cs=tinysrgb&fm=jpg&ixlib=rb-1.2.1&q=80&raw_url=true&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1498"
-                        width="200px" height="100px" class="smallPic" ondblclick="changePic(this)"
-                        onclick="selectPicture(this)">
-
-                    <img src="https://images.unsplash.com/photo-1648614009917-84831416abb6?crop=entropy&cs=tinysrgb&fm=jpg&ixlib=rb-1.2.1&q=80&raw_url=true&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1074"
-                        width="200px" height="100px" class="smallPic" ondblclick="changePic(this)"
-                        onclick="selectPicture(this)">
-
-                    <img src="https://images.unsplash.com/photo-1637720361854-7f7c7ad3c85e?crop=entropy&cs=tinysrgb&fm=jpg&ixlib=rb-1.2.1&q=80&raw_url=true&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1074"
-                        width="200px" height="100px" class="smallPic" ondblclick="changePic(this)"
-                        onclick="selectPicture(this) ">
+                    <div class="second" onmouseover="showDescription(this)">
+                        <img src="https://images.unsplash.com/photo-1649302161055-e8a6b307b134?crop=entropy&cs=tinysrgb&fm=jpg&ixlib=rb-1.2.1&q=80&raw_url=true&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1475"
+                            width="200px" height="100px" class="smallPic" ondblclick="changePic(this)"
+                            onclick="selectPicture(this)">
+                        <div class="info" id="0">Aprasymas</div>
+                    </div>
+                    <div class="second" onmouseover="showDescription(this)">
+                        <img src="https://images.unsplash.com/photo-1648996757972-918f03837d0d?crop=entropy&cs=tinysrgb&fm=jpg&ixlib=rb-1.2.1&q=80&raw_url=true&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1498"
+                            width="200px" height="100px" class="smallPic" ondblclick="changePic(this)"
+                            onclick="selectPicture(this)">
+                        <div class="info" id="1">Aprasymas</div>
+                    </div>
+                    <div class="second" onmouseover="showDescription(this)">
+                        <img src="https://images.unsplash.com/photo-1648614009917-84831416abb6?crop=entropy&cs=tinysrgb&fm=jpg&ixlib=rb-1.2.1&q=80&raw_url=true&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1074"
+                            width="200px" height="100px" class="smallPic" ondblclick="changePic(this)"
+                            onclick="selectPicture(this)">
+                        <div class="info" id="2">Aprasymas</div>
+                    </div>
+                    <div class="second" onmouseover="showDescription(this)">
+                        <img src="https://images.unsplash.com/photo-1637720361854-7f7c7ad3c85e?crop=entropy&cs=tinysrgb&fm=jpg&ixlib=rb-1.2.1&q=80&raw_url=true&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1074"
+                            width="200px" height="100px" class="smallPic" ondblclick="changePic(this)"
+                            onclick="selectPicture(this) ">
+                        <div class="info" id="3">Aprasymas</div>
+                    </div class="second">
                 </div>
                 <div class="bot">
                     <div class="botPic">
@@ -65,7 +74,7 @@
                 <hr>
             </div>
             <div id="right3">
-                <label for="about">Rodyti aprasyma</label><input type="checkbox" name="about" id="">
+                <label for="about">Rodyti aprasyma</label><input type="checkbox" name="about" id="showDescriptionCheck">
             </div>
         </div>
     </div>
